# washer

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/docflow/: __init__.py  cli.py  desktop_launcher.py  schemas.py  settings.py
backend/src/docflow/api/: app.py  routes.py
backend/src/docflow/core/: __init__.py
backend/src/docflow/core/cleaners/: __init__.py  strategies.py
backend/src/docflow/core/dedup/: engine.py
backend/src/docflow/core/output/: __init__.py  formatter.py
backend/src/docflow/core/parsers/: registry.py
backend/src/docflow/core/quality/: __init__.py  scorer.py
backend/src/docflow/core/redaction/: __init__.py  engine.py
backend/src/docflow/db/: models.py  repositories.py  session.py
backend/src/docflow/mcp/: __init__.py  server.py
backend/src/docflow/services/: jobs.py  pipeline.py  runtime.py  storage.py
backend/src/docflow/utils/: __init__.py  hashing.py  logging.py  text.py
backend/src/docflow/workers/: __init__.py  runner.py
backend/src/docflow_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: conftest.py  test_job_service.py  test_pipeline.py
config/: default.yaml
data/input_samples/: customer_faq.md  customer_faq_duplicate.txt  exported_page.html  incident_mail.eml
desktop/: docflow_studio.spec  launcher.py
docs/: solution-overview.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  styles.css
frontend/src/components/: DocumentPanel.tsx  (+6 more)
scripts/: build_exe.ps1  dev.ps1
skills/rag-document-ingestion/: SKILL.md
(+3 files in other folders)
